--- a/public/css/style-original.css
+++ b/public/css/style-original.css
@@ -70,8 +70,8 @@
   }
   
   .logo-icon {
-    width: 40px;
-    height: 40px;
+    width: 48px;
+    height: 48px;
     background: var(--primary-color);
     border-radius: 50%;
     display: flex;
@@ -79,6 +79,14 @@
     justify-content: center;
     color: var(--white);
     font-size: 1.5rem;
+    overflow: hidden;
+  }
+
+  .logo-icon img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
   
   .logo-text h1 {
